Update AgGateway-Traceability API.yml with member.services email

--- a/AgGateway-Traceability API.yml
+++ b/AgGateway-Traceability API.yml
@@ -6,7 +6,7 @@ info:
   contact:
     name: AgGateway
     url: https://traceability.aggateway.org
-    email: wg20@aggateway.org
+    email: member.services@aggateway.org
   license:
     name: AgGateway API License
     url: https://legal.aggateway.org/terms-of-service
