--- a/AgGateway-Traceability API.yml
+++ b/AgGateway-Traceability API.yml
@@ -1048,7 +1048,7 @@ components:
           additionalProperties: false
           properties:
             typeCode:
-              example: "Multi-Polygon"
+              example: "Polygon"
               type: "string"
               format: "token"
             uuid:
@@ -1067,13 +1067,12 @@ components:
               example: "Back 40"
               type: "string"
             formatCode:
-              example: "GeoJSON"
+              example: "WKT"
               type: "string"
               format: "token"
             value:
-              example: " [           [             [100.0, 0.0],             [101.0,\
-                \ 0.0],             [101.0, 1.0],             [100.0, 1.0],      \
-                \       [100.0, 0.0]           ]         ]"
+              example: "POLYGON ((1 1, 1 3, 3 3, 3 1, 1 1), (4 3, 6 3, 6 1, 4 1, 4\
+                \ 3))"
               type: "string"
             uri:
               example: "https://api.oemplatform.com/field/e3a8aec7-f2a2-4cb3-a5c7-02358c588002"
@@ -1269,21 +1268,17 @@ components:
                       additionalProperties: false
                       properties:
                         id:
-                          oneOf:
-                          - nullable: true
-                          - example: ""
-                            type: "string"
-                            format: "normalizedString"
+                          example: ""
+                          type: "string"
+                          format: "normalizedString"
                         uuid:
                           example: ""
                           type: "string"
                           format: "normalizedString"
                         sourceId:
-                          oneOf:
-                          - nullable: true
-                          - example: ""
-                            type: "string"
-                            format: "normalizedString"
+                          example: ""
+                          type: "string"
+                          format: "normalizedString"
                         partyId:
                           example: ""
                           type: "string"
@@ -1617,7 +1612,7 @@ components:
           additionalProperties: false
           properties:
             typeCode:
-              example: "Multi-Polygon"
+              example: "MULTIPOLYGON"
               type: "string"
               format: "token"
             uuid:
@@ -1636,13 +1631,12 @@ components:
               example: "Back 40"
               type: "string"
             formatCode:
-              example: "GeoJSON"
+              example: "WKT"
               type: "string"
               format: "token"
             value:
-              example: " [           [             [100.0, 0.0],             [101.0,\
-                \ 0.0],             [101.0, 1.0],             [100.0, 1.0],      \
-                \       [100.0, 0.0]           ]         ]"
+              example: "MULTIPOLYGON (((1 1, 1 3, 3 3, 3 1, 1 1)), ((4 3, 6 3, 6 1,\
+                \ 4 1, 4 3)))"
               type: "string"
             uri:
               example: "https://api.oemplatform.com/field/e3a8aec7-f2a2-4cb3-a5c7-02358c588002"
@@ -2005,7 +1999,7 @@ components:
           additionalProperties: false
           properties:
             typeCode:
-              example: "Multi-Polygon"
+              example: "MULTIPOLYGON"
               type: "string"
               format: "token"
             uuid:
@@ -2024,13 +2018,12 @@ components:
               example: "Back 40"
               type: "string"
             formatCode:
-              example: "GeoJSON"
+              example: "WKT"
               type: "string"
               format: "token"
             value:
-              example: " [           [             [100.0, 0.0],             [101.0,\
-                \ 0.0],             [101.0, 1.0],             [100.0, 1.0],      \
-                \       [100.0, 0.0]           ]         ]"
+              example: "MULTIPOLYGON (((1 1, 1 3, 3 3, 3 1, 1 1)), ((4 3, 6 3, 6 1,\
+                \ 4 1, 4 3)))"
               type: "string"
             uri:
               example: "https://api.oemplatform.com/field/e3a8aec7-f2a2-4cb3-a5c7-02358c588002"
@@ -2357,7 +2350,7 @@ components:
           additionalProperties: false
           properties:
             typeCode:
-              example: "Multi-Polygon"
+              example: "MULTIPOLYGON"
               type: "string"
               format: "token"
             uuid:
@@ -2380,9 +2373,8 @@ components:
               type: "string"
               format: "token"
             value:
-              example: " [           [             [100.0, 0.0],             [101.0,\
-                \ 0.0],             [101.0, 1.0],             [100.0, 1.0],      \
-                \       [100.0, 0.0]           ]         ]"
+              example: "MULTIPOLYGON (((1 1, 1 3, 3 3, 3 1, 1 1)), ((4 3, 6 3, 6 1,\
+                \ 4 1, 4 3)))"
               type: "string"
             uri:
               example: "https://api.oemplatform.com/field/e3a8aec7-f2a2-4cb3-a5c7-02358c588002"
@@ -2570,21 +2562,17 @@ components:
                       additionalProperties: false
                       properties:
                         id:
-                          oneOf:
-                          - nullable: true
-                          - example: ""
-                            type: "string"
-                            format: "normalizedString"
+                          example: ""
+                          type: "string"
+                          format: "normalizedString"
                         uuid:
                           example: ""
                           type: "string"
                           format: "normalizedString"
                         sourceId:
-                          oneOf:
-                          - nullable: true
-                          - example: ""
-                            type: "string"
-                            format: "normalizedString"
+                          example: ""
+                          type: "string"
+                          format: "normalizedString"
                         partyId:
                           example: ""
                           type: "string"
@@ -3782,11 +3770,9 @@ components:
           type: "string"
           format: "normalizedString"
         sourceId:
-          oneOf:
-          - nullable: true
-          - example: "Data Platform"
-            type: "string"
-            format: "normalizedString"
+          example: "Data Platform"
+          type: "string"
+          format: "normalizedString"
         partyId:
           example: "FarmerA"
           type: "string"
@@ -3980,11 +3966,9 @@ components:
           type: "string"
           format: "normalizedString"
         sourceId:
-          oneOf:
-          - nullable: true
-          - example: "Data Platform"
-            type: "string"
-            format: "normalizedString"
+          example: "Data Platform"
+          type: "string"
+          format: "normalizedString"
         partyId:
           example: "FarmerA"
           type: "string"
@@ -4569,11 +4553,9 @@ components:
           type: "string"
           format: "normalizedString"
         sourceId:
-          oneOf:
-          - nullable: true
-          - example: "Data Platform"
-            type: "string"
-            format: "normalizedString"
+          example: "Data Platform"
+          type: "string"
+          format: "normalizedString"
         partyId:
           example: "FarmerA"
           type: "string"
