--- a/AgGateway-Traceability API.yml
+++ b/AgGateway-Traceability API.yml
@@ -2369,7 +2369,7 @@ components:
               example: "Back 40"
               type: "string"
             formatCode:
-              example: "GeoJSON"
+              example: "WKT"
               type: "string"
               format: "token"
             value:
@@ -3386,13 +3386,12 @@ components:
           example: "Back 40"
           type: "string"
         formatCode:
-          example: "GeoJSON"
+          example: "WKT"
           type: "string"
           format: "token"
         value:
-          example: " [           [             [100.0, 0.0],             [101.0, 0.0],\
-            \             [101.0, 1.0],             [100.0, 1.0],             [100.0,\
-            \ 0.0]           ]         ]"
+          example: "MULTIPOLYGON (((1 1, 1 3, 3 3, 3 1, 1 1)), ((4 3, 6 3, 6 1,\
+                \ 4 1, 4 3)))"
           type: "string"
         uri:
           example: "https://api.oemplatform.com/field/e3a8aec7-f2a2-4cb3-a5c7-02358c588002"
@@ -3454,7 +3453,7 @@ components:
           example: "Back 40"
           type: "string"
         formatCode:
-          example: "GeoJSON"
+          example: "WKT"
           type: "string"
           format: "token"
         uri:
